--- a/package.json
+++ b/package.json
@@ -7,7 +7,12 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "node server.js",
-    "start": "node server.js"
+    "start": "node server.js",
+    "api": "nodemon api/server.js",
+    "db:setup": "psql -d flashpharma -f database/schema.sql",
+    "db:reset": "dropdb --if-exists flashpharma && createdb flashpharma && npm run db:setup",
+    "migrate:preview": "node database/migrate-questions.js",
+    "migrate:execute": "node database/migrate-questions.js --execute"
   },
   "repository": {
     "type": "git",
@@ -21,9 +26,21 @@
   },
   "homepage": "https://github.com/laurentstaub/kevin_cards#readme",
   "dependencies": {
-    "express": "^4.18.2"
+    "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "express-rate-limit": "^7.1.5",
+    "helmet": "^7.1.0",
+    "joi": "^17.11.0",
+    "jsonwebtoken": "^9.0.2",
+    "marked": "^9.1.6",
+    "marked-highlight": "^2.2.2",
+    "pg": "^8.11.3",
+    "turndown": "^7.1.2"
   },
   "devDependencies": {
-    "live-server": "^1.2.2"
+    "live-server": "^1.2.0",
+    "nodemon": "^3.0.2"
   }
 }
